--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.3.2",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.4",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.4.4",
+    "@nestjs/typeorm": "^10.0.2",
+    "oracledb": "^6.6.0",
     "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
